Fixes for verbose log message display in the revision log: the nowrap declaration was not being overridden in the CSS. Also, use  instead of empty cells.
git-svn-id: http://trac.edgewall.org/intertrac/log:/branches/0.11-stable@7189 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/browser.css
+++ b/trac/htdocs/css/browser.css
@@ -153,13 +153,13 @@ tr.diff input { padding: 0 1em; margin: 0 }
  width: 100%; 
  font-size: 85%; 
  vertical-align: middle; 
- white-space: nowrap 
+ white-space: nowrap;
 }
-#chglist tr.summary {
+#chglist tr.verbose td.summary {
  border: none;
  color: #333;
  padding: .5em 1em 1em 2em;
- white-space: normal 
+ white-space: normal;
 }
 
 #chglist td.summary * { margin-top: 0 }
